# DPDK_DNS

./: README.md
dpdkCpp/: CMakeLists.txt  start.sh
dpdkCpp/src/: CMakeLists.txt  main.cpp
dpdkDoc/: dpdk_work_with_nic.md  env_AFLplusplus.md  settings.md
